# SDK

./: attachments.py  client.py  identity.py  pyproject.toml  storage.py
reti-sdk/: README.md
reti-sdk/reti/: __init__.py  transport.py  types.py
reti-sdk/reti_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reti-sdk/tests/: test_client.py
